[gd_scene load_steps=15 format=3 uid="uid://drs5ilxjd5ufe"]

[ext_resource type="Script" path="res://scripts/ceres_target_orb.gd" id="1_ujayk"]
[ext_resource type="Texture2D" uid="uid://btced1y2j317q" path="res://assets/sprites/fx/spr_ceres_orb.png" id="2_6hvwg"]
[ext_resource type="AudioStream" uid="uid://dqxu5pv7k6tdc" path="res://assets/sfx/snd_magic_slash.wav" id="3_oi88c"]
[ext_resource type="Texture2D" uid="uid://cv02b1a8sn5in" path="res://assets/sprites/fx/spr_cross_aim.png" id="4_inkhi"]

[sub_resource type="Animation" id="Animation_bck2b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TargetIcon:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ao6w2"]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3dco6"]
resource_name = "default"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TargetIcon:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xsgut"]
_data = {
"RESET": SubResource("Animation_bck2b"),
"fade_out": SubResource("Animation_ao6w2"),
"shoot": SubResource("Animation_3dco6")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_18vhq"]
radius = 7.0

[sub_resource type="AtlasTexture" id="AtlasTexture_2tjex"]
atlas = ExtResource("4_inkhi")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0hhf"]
atlas = ExtResource("4_inkhi")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxfqf"]
atlas = ExtResource("4_inkhi")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ilav"]
atlas = ExtResource("4_inkhi")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_yyeac"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tjex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0hhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxfqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ilav")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="CeresTargetOrb" type="Area2D"]
top_level = true
z_index = 1
collision_layer = 0
collision_mask = 2
script = ExtResource("1_ujayk")

[node name="Sprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_6hvwg")
hframes = 8
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xsgut")
}
autoplay = "RESET"

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(7, 0)
shape = SubResource("CircleShape2D_18vhq")
disabled = true

[node name="Duration" type="Timer" parent="."]
one_shot = true

[node name="SlashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_oi88c")
volume_db = 6.0
bus = &"SFX"

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 1.7
one_shot = true
autostart = true

[node name="TargetIcon" type="AnimatedSprite2D" parent="."]
top_level = true
z_index = 2
sprite_frames = SubResource("SpriteFrames_yyeac")
autoplay = "default"
frame = 3
frame_progress = 0.158112

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Duration" to="." method="_on_duration_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
